--- a/ui.html
+++ b/ui.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oOyY9fwd&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nAgYVLwZ'>Ingram Micro Careers - Manager, UX/UI Design</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">Belgrade Belgrade</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/intouchgroup/ad4fda5d-0c8e-4c4b-a7e3-923c40c75b98'>Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/intouchgroup/ad4fda5d-0c8e-4c4b-a7e3-923c40c75b98'>Intouch Group - ASSOCIATE TALENT ACQUISITION MANAGER</a></h5> 
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4350/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4350/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -132,7 +132,7 @@
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4360/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4360/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -207,7 +207,7 @@ objectively measure impact and optimize engineering processes; Meeting?...</p>
 <p>Jul 16, 2019 ... Research, architect and implement responsive, reusable, customizable next 
 generation web and mobile components and interfaces. Develop new ways of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692283821-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -246,7 +246,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/sr-ui-developer-hunter-13041'>Sr. UI Developer - Hunter - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/sr-ui-developer-hunter-13041'>Sr. UI Developer - Hunter - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -270,7 +270,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -384,7 +384,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://ah-recruitment.join.com/jobs/256443-senior-consultant-principal-consultant-m-w-d-automotive'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/256443-senior-consultant-principal-consultant-m-w-d-automotive'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Stutt... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -432,7 +432,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/food-worker-melrose-part-time-4299'>Food Worker- Melrose (Part Time) - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/food-worker-melrose-part-time-4299'>Food Worker- Melrose (Part Time) - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -440,7 +440,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4295/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4295/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
